--- a/paper/modularity.bib
+++ b/paper/modularity.bib
@@ -1,3 +1,11 @@
+@article{beckettZenodo,
+  title={{weighted-modularity-LPAwbPLUS: Improved community detection in weighted bipartite networks}},
+  author={Beckett, Stephen J},
+  year={2015},
+  publisher={Zenodo},
+  pages={10.5281/zenodo.19477}
+}
+
 @article{newman2004analysis,
   title={Analysis of weighted networks},
   author={Newman, Mark EJ},
@@ -64,7 +72,7 @@
   author={Dormann, C.F. and Gruber B. and Fruend, J.},
   year ={2008},
   title= {Introducing the bipartite Package: Analysing Ecological Networks},
-  journal ={R news}
+  journal ={R news},
   volume = {8/2},
   pages= {8--11}
 }
@@ -246,9 +254,10 @@
 
 
 
-@article{vazquez2002interactions,
+@phdthesis{vazquez2002interactions,
   title={Interactions among introduced ungulates, plants, and pollinators: a field study in the temperate forest of the southern Andes},
   author={V{\'a}zquez, Diego P},
+  school={ University of Tennessee, Knoxville, Tennessee, USA.},
   year={2002}
 }
 
@@ -337,6 +346,7 @@
 @article{kato1990insect,
   title={Insect-flower relationship in the primary beech forest of Ashu, Kyoto: an overview of the flowering phenology and the seasonal pattern of insect visits},
   author={Kato, Makoto and Kakutani, Takehiko and Inoue, Tamiji and Itino, Takao},
+  journal={Contributions from the Biological Laboratory, Kyoto University},
   year={1990},
   publisher={Biological Laboratory, Kyoto University}
 }
@@ -423,15 +433,7 @@
 }
 
 
-@article{staniczenko2013ghost,
-  title={The ghost of nestedness in ecological networks},
-  author={Staniczenko, Phillip PA and Kopp, Jason C and Allesina, Stefano},
-  journal={Nature communications},
-  volume={4},
-  pages={1391},
-  year={2013},
-  publisher={Nature Publishing Group}
-}
+
 
 
 
