--- a/paper/modularity.bib
+++ b/paper/modularity.bib
@@ -6,6 +6,50 @@
   pages={10.5281/zenodo.19585}
 }
 
+@book{wilsonintroduction,
+  title={Introduction to Graph Theory},
+  year={1996},
+  author={Wilson, RJ},
+  edition=4,
+  isbn={0582249937},
+  publisher={Longman, Harlow, Essex, England}
+}
+
+@article{clauset2008hierarchical,
+  title={Hierarchical structure and the prediction of missing links in networks},
+  author={Clauset, Aaron and Moore, Cristopher and Newman, Mark EJ},
+  journal={Nature},
+  volume={453},
+  number={7191},
+  pages={98--101},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{saavedra2011strong,
+  title={Strong contributors to network persistence are the most vulnerable to extinction},
+  author={Saavedra, Serguei and Stouffer, Daniel B and Uzzi, Brian and Bascompte, Jordi},
+  journal={Nature},
+  volume={478},
+  number={7368},
+  pages={233--235},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@article{newman2002random,
+  title={Random graph models of social networks},
+  author={Newman, Mark EJ and Watts, Duncan J and Strogatz, Steven H},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={suppl 1},
+  pages={2566--2572},
+  year={2002},
+  publisher={National Acad Sciences}
+}
+
+
 @article{newman2004analysis,
   title={Analysis of weighted networks},
   author={Newman, Mark EJ},
@@ -50,10 +94,11 @@
 }
 
 @article{flores2014bimat,
-  title={BiMAT: a MATLAB (R) package to facilitate the analysis and visualization of bipartite networks},
-  author={Flores, Cesar O and Poisot, Timoth{\'e}e and Weitz, Joshua S},
-  journal={arXiv preprint arXiv:1406.6732},
-  year={2014}
+  title={BiMAT: a MATLAB package to facilitate the analysis of bipartite networks},
+  author={Flores, Cesar O and Poisot, Timoth{\'e}e and Valverde, Sergi and Weitz, Joshua S},
+  journal={Methods in Ecology and Evolution},
+  year={2015},
+  doi={10.1111/2041-210X.12458}
 }
 
 
